# dwd-api

./: CNAME  README.md  generator_config.yaml  index.html  openapi.yaml
python-client/: README.md  pyproject.toml
python-client/.openapi-generator/: FILES
python-client/docs/: CROWDMeldung.md  CROWDMeldungHighestSeveritiesInner.md  CROWDMeldungMeldungenInner.md  DefaultApi.md  GemeindeWarnings.md  GemeindeWarningsBinnenSee.md  GemeindeWarningsBinnenSee209901000Inner.md  GemeindeWarningsWarningsInner.md  StationOverview10865.md  StationOverview10865DaysInner.md  StationOverviewExtendedGetStationIdsParameterInner.md  WarningCoastWarnings.md  WarningCoastWarnings501000007Inner.md  WarningNowcastWarningsInner.md  WarningNowcastWarningsInnerRegionsInner.md
python-client/sphinx-docs/: conf.py  index.rst
python-client/test/: test_crowd_meldung.py  test_crowd_meldung_highest_severities.py  test_crowd_meldung_highest_severities_inner.py  test_crowd_meldung_meldungen.py  test_crowd_meldung_meldungen_inner.py  test_default_api.py  test_error.py  test_gemeinde_warnings.py  test_gemeinde_warnings_binnen_see.py  test_gemeinde_warnings_binnen_see209901000.py  test_gemeinde_warnings_binnen_see209901000_inner.py  test_gemeinde_warnings_warnings.py  test_gemeinde_warnings_warnings_inner.py  test_station_overview.py  test_station_overview10865.py  test_station_overview10865_days.py  test_station_overview10865_days_inner.py  test_station_overview10865_forecast1.py  test_station_overview10865_forecast2.py  test_station_overview_extended_get_station_ids_parameter_inner.py  (+9 more)
(+42 files in other folders)
